fix contact spacing

--- a/static/css/style_1.css
+++ b/static/css/style_1.css
@@ -251,8 +251,7 @@ button:focus {
   width: 40px;
   border-radius: 50%;
   position: relative;
-  top: -3000px;
-  
+  top: -300px;
   background: #e5e2d3;
   z-index: 1000;
   transition: transform 0s cubic-bezier(0.86, 0, 0.07, 1); 
@@ -415,8 +414,10 @@ button:focus {
  }
 
  .copyright_name{
-   padding-left: 0;
    margin-left: 0; 
+ }
+ .footer_center{
+   font-size: 21px !important;
  }
 }
 
